# netmotifs

./: .gitignore  README.md  buildegg.py  eggtest.py
EGG-INFO/: PKG-INFO  native_libs.txt
benchmarks/: benchmarks.py
data/: data.py  synth.py  teselate.py
docs/: Makefile  celegans.ai  celldepthfeatures.ai  connectomics motif-relational models.bib  connectomics motif.bib  exponentialdistancepoisson.ai  f1.raw.ai  f1.sorted.ai  fig1.py  fig1b.ai  getgraphics.py  irmwriteup.tex  logisticdistance.ai  mos6502.ai  nature-template.tex  nature.cls  overview.ai  paper.tex  svg2ai.jsx  svg2ai.py  synthetic.ai  techreport.out  techreport.tex
docs/celegans/: celegans.2r.ldp.01.data-fixed_100_200-anneal_slow_400.circos.0.ai  celegans.2r.ldp.01.data-fixed_100_200-anneal_slow_800.circos.0.ai  celegans.2r.ldp.02.data-fixed_100_200-anneal_slow_800.circos.0.ai  celegans.2r.ldp.03.data-fixed_100_200-anneal_slow_400.circos.0.ai
docs/mos6502/: sixrelation.xysregs.ldfl.circos.4.R2.ai
docs/mouseretina/: mouseretina_tgt.circos.00.ai  mouseretina_tgt.circos.00.small.ai  mouseretina_tgt.circos.01.ai  mouseretina_tgt.circos.01.small.ai  mouseretina_tgt.circos.02.ai  mouseretina_tgt.circos.02.small.ai  mouseretina_tgt.circos.ai  retina.1.2.ld.0.0.data-fixed_20_100-anneal_slow_400.circos.01.ai  retina.1.2.ld.0.0.data-fixed_20_100-anneal_slow_400.circos.01.svg.ai
docs/paper/: outline.txt  paper.tex
experiments/: logit.py  slicesampler.py  temptrans.py
experiments/celegans/: README  diagnostic.py  pipeline.py  preprocess.py  report.template
experiments/complexity/: README  pipeline.py
experiments/drosophila/: diagnostic.py  pipeline.py  preprocess.py
experiments/drosophilia/: diagnostic.py  pipeline.py  preprocess.py
experiments/jobs/: README  diagnostic.py  latent.py  pipeline.py  pipeline_zips.py  preprocess.py  synth.py  util.py
experiments/laminar/: pipeline.py  spatial.py
experiments/mixing/: README  pipeline.py
experiments/mixing2/: README  pipeline.py
experiments/mos6502/: NOTES  pipeline.py  preprocess.py  rawgraph.dot  read.py  sixrelation.py  sixrelation_circos.py  sixrelation_report.py  util.py
experiments/mouseretina/: README  diagnostic_plots.py  pipeline.py  plot_latent.py  preprocess.py  test_score_component.py  util.py
experiments/postenum/: README  pipeline.py  util.py
experiments/regirmfail/: README  pipeline.py  pipeline2.py  plot.py  rand.py
experiments/testinf/: assignmentplot.py  pipeline.py  rand.py
irm/: CMakeLists.txt  NOTES  __init__.py  benchmark.cc  benchmark.py  componentcontainer.h  componentmh.cc  componentmh.h  componentmodels.cc  componentmodels.h  componentslice.cc  componentslice.h  cvpipelineutil.py  disttest.cc  experiments.py  fast_static_vect.h  fastmodel.cc  fastmodel.h  fastmodel.pyx  fastonebigheader.h  fastrelation.pyx  format.txt  futuretest.cc  gibbs.py  gridgibbshps.py  group_coords.h  helloworld.cc  irm.py  irmio.py  kernels.h  kernels.py  model.py  models.py  observations.py  parrelation.cc  parrelation.h  plot.py  postenum.py  pyirm.cc  pyirm_helpers.cc  (+17 more)
irm/data/: __init__.py  data.py  generate.py  synth.py  tesselate.py
irm/plots/: __init__.py  circos.py  circos_conf.template  circos_karyotype.template  circos_links.template  circos_ribbons.template  circos_structure_label.template
tests/: experiment_run.py  modelexample.ipynb  postenum.py  test_fixed_gibbs.py  test_gibbs.py  test_hp_inference.py  test_inference.py  test_io.py  test_irmio.py  test_kernels.py  test_model.py  test_plots_circos.py  test_pyirm.py  test_relation_same.py  test_synth.py  test_util.py  testrun.py
